--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,18 @@
     <link rel="stylesheet" href="/assets/style.css" />
   </head>
   <body>
+
     <header class="site-header">
-      <h1><a href="/">{{ site.title }}</a></h1>
-      <p class="tagline">{{ site.description }}</p>
+    <h1><a href="/">{{ site.title }}</a></h1>
+    <p class="tagline">{{ site.description }}</p>
+
+    <nav class="site-nav">
+        <a href="/">Domů</a>
+        <a href="/rodina/">Rodina</a>
+        <a href="/projekty/">Projekty</a>
+        <a href="/rpg/">RPG</a>
+        <a href="/poznamky/">Poznámky</a>
+    </nav>
     </header>
 
     <main class="site-content">
